Archive2/26/ae4ec5767b1906/output
main.cpp: In constructor 'C::C()':
main.cpp:26:16: error: call of overloaded 'B(C&)' is ambiguous
         B(*this)
                ^
main.cpp:26:16: note: candidates are:
main.cpp:13:5: note: B::B(A&)
     B(A& a): 
     ^
main.cpp:11:8: note: constexpr B::B(const B&)
 struct B
        ^
